Bug fix: create link dialog slightly too wide. Add some validation to the create link dialog. Currently there's no indication to the user that validation has failed other than the fact that the dialog remains in place. Adding an alert screwed up the focus on iOS.

--- a/quink/resources/css/quink.css
+++ b/quink/resources/css/quink.css
@@ -33,7 +33,6 @@
     background-color: #EBEBEB;
 }
 .qk_dialog {
-    width: 100%;
 }
 .qk_container {
     height: 100%;
